<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/brightYellow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="18dp">

            <TextView
                android:id="@+id/choose_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueGreen"
                android:layout_marginLeft="15dp"
                android:text="@string/cancel"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/choose_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="18dp"
            android:layout_weight="1" >

            <!-- 全选，全不选 -->
            <!--
            <TextView
                android:id="@+id/choose_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueGreen"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:text="@string/all"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/choose_fan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueGreen"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:text="@string/fan"
                android:textSize="18sp"
                android:visibility="invisible"/>
            -->

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray" />

    <ListView
        android:id="@+id/choose_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/lightGray" />

        <LinearLayout
            android:id="@+id/choose_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/delete"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/delete"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
